# gated-memory-policy

./: .gitmodules  LICENSE  README.md
mujoco-env/: .gitignore  README.md  env.yaml  pyproject.toml
mujoco-env/config/: collect_heuristic_data.yaml  collect_sliding_distances.yaml  hydra.yaml  iphone_teleop.yaml  keyboard_teleop.yaml  rollout_policy.yaml  rollout_policy_fling_cloth.yaml  rollout_policy_parallel.yaml  rollout_policy_pick_and_match_color.yaml  rollout_policy_pick_and_place_back.yaml  rollout_policy_push_cube.yaml  run_heuristic_agent.yaml  serve_remote_env.yaml  spacemouse_teleop.yaml
mujoco-env/config/task/: base_task.yaml  fling_cloth.yaml  parallel_task.yaml  pick_and_match_color.yaml  pick_and_match_color_rand_delay.yaml  pick_and_place_back.yaml  push_cube.yaml  robomimic.yaml  robomimic_square.yaml  robomimic_tool_hang.yaml  robomimic_transport.yaml
mujoco-env/env/assets/objects/: can.xml  (+5 more)
mujoco-env/env/modules/: common.py  remote_env_server.py
mujoco-env/env/utils/: config_utils.py  data_utils.py  pose_utils.py  robomimic_util.py  visualize_utils.py
mujoco-env/scripts/: analyze_sliding_distances.py  browse_mjcf_model.py  collect_heuristic_data.py  collect_sliding_distances.py  convert_data_to_video.py  convert_robomimic_dataset_to_zarr.py  rollout_policy.py  rollout_policy_parallel.py  run_heuristic_agent.py  run_spacemouse_teleop.py  serve_remote_env.py  serve_rollout_website.py
mujoco-env/shell_scripts/: collect_data.sh  rollout_policy.sh  rollout_policy_parallel.sh  serve_multi_gpu.sh  serve_remote_env.sh  serve_website.sh  setup_env.sh
(+258 files in other folders)
